# Cell-DEVS-Fish-School

./: .gitignore  CMakeLists.txt  DEVSmodelsForm.doc  README.md  build_sim.sh  generate_config.py  test_fish_school.py
config/: coop_diagonal_config.json  coop_platoon_config.json  coop_wall_config.json  current_coop_fallback_config.json  current_coop_fallback_no_currents_config.json  current_selfish_tiebreak_config.json  current_selfish_tiebreak_no_currents_config.json  current_stall_config.json  current_stall_no_currents_config.json  current_test_config.json  current_wander_config.json  current_wander_no_currents_config.json  large_school_config.json  large_school_no_currents_config.json  predator_east_config.json  predator_north_config.json  predator_south_config.json  predator_west_config.json  reluctance_demo_config.json  reluctance_demo_no_currents_config.json  scenario_1_apart_config.json  scenario_2_vline_config.json  scenario_3_hline_config.json  scenario_4_cross_config.json  scenario_5_diamond_config.json  scenario_6_right_angle_config.json  schooling_config.json  schooling_no_currents_config.json  selfish_encounter_config.json  selfish_encounter_no_currents_config.json
logs/: coop_diagonal_log.csv  coop_escape_current_log.csv  coop_platoon_log.csv  coop_wall_log.csv  cooperative_escape_no_current_log.csv  fish_school_log.csv  large_school_log.csv  predator_east_log.csv  predator_north_log.csv  predator_south_log.csv  predator_west_log.csv  reluctance_log.csv  scenario_1_fish_school_log.csv  scenario_2_fish_school_log.csv  scenario_3_fish_school_log.csv  (+4 more)
(+25 files in other folders)
